# metric-rs

./: Cargo.toml
src/: calc.rs  lib.rs  objects.rs
src/calc/: basic.rs  constants.rs  construct.rs  constructs.rs  exception.rs  point_on.rs  transform.rs  trig.rs
src/calc/trig/: centers.rs
tests/: basic.rs
