[package]
name = "metric-rs"
version = "0.1.0"
edition = "2021"
description = "A crate for basic calculation functionalities related to Euclidean geometry. A rust port of `Metric` TypeScript package."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
